--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
 h1 {
-background-color: blue;
+    text-align: center;
+}
+
+body {
+    background-color: lightgoldenrodyellow ;
+}
+
+.avatar {
+    position: fixed;
+}
+h2 {
+    text-align: center;
 }
