--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ h2 {
 }
 
 body {
-    background-color: lightgoldenrodyellow ;
+    background-color: white ;
 }
 
 .avatar {
@@ -17,4 +17,25 @@ body {
 
 p {
     padding-left: 310px;
+}
+
+html, body {
+    height: 100%;
+
+}
+
+section {
+    min-height: 100%;
+    height: auto;
+    height: 100%;
+    margin: 0 auto -4em;
+}
+ul {
+    display: inline-flexbox;
+}
+
+.footer {
+    color: white;
+    padding: 30px;
+    background-color: black;
 }
