--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 header {
     display: block;
     background-image: url('img-head.jpg');
+    height: 150px;
 }
 
 .text-head {
@@ -23,11 +24,6 @@ html, body {
     margin: 0;
 }
 
-body {
-    display: flex;
-    flex-direction: column;
-}
-
 .main {
     display: flex;
     flex: 1 0;
@@ -35,7 +31,8 @@ body {
 
 .purpose {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    flex-wrap: initial;
     text-align: center
 }
 
