--- a/style.css
+++ b/style.css
@@ -117,8 +117,8 @@ html, body {
         flex-direction: column;
         background: linear-gradient(#4b7be2, #00ffff);
         color: black;
-        margin: 30px 10px;
         padding: 40px 20px;
+        width: 100%;
     }
 
         .fa-solid {
@@ -127,28 +127,25 @@ html, body {
         }
 
         #flex-item1 {
-            width: 400px;
+            width: 30%;
         }
 
         #flex-item2 {
-            width: 400px;
+            width: 30%;
         }
 
         #flex-item3 {
-            width: 400px;
+            width: 30%;
         }
 
 .location {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    text-align: center;
+    margin: 30px;
+    padding: 30px;
 }
 
-    #map {
-        text-align: center;
-        width: 40%vw;
-        padding: 120px 50px;
-        
-    }
 .footer {
     display: flex;
     justify-content: space-around;
