--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ html, body {
     width: 100vw;
 }
 
-.contact {
+.contacts {
     display: inline-block;
     position: fixed;
     left: 48%;
@@ -33,8 +33,8 @@ html, body {
 }
 
     #avatar {
-        width: 25%;
-        height: 50%;
+        width: 300px;
+        height: 300px;
     }
 
     .hello-name {
