--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ html, body {
 .main {
     display: flex;
     justify-content: center;
-    margin: 30px 100px;
+    margin: 30px;
 }
 
     #avatar {
