--- a/style.css
+++ b/style.css
@@ -188,10 +188,10 @@ a:hover {
 }
 
 @media screen and (max-width: 1000px) {
-    body.contentblock {width: 1000px;}
+    .body {
+        width: 1000px;
+    }
     .main {
-        width: device-width;
-        height: device-width;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -200,10 +200,10 @@ a:hover {
 }
 
 @media screen and (max-width: 800px) {
-    body.contentblock {width: 800px;}
+    .body {
+        width: 800px;
+    }
     .list {
-        width: device-width;
-        height: device-width;
         display: flex;
         flex-direction: column;
     }
