--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ html, body {
     padding: 30px;
 }
 
-    #map {
+    #map-loc {
         margin-top: 100px;
         width: 30%;
     }
@@ -187,6 +187,23 @@ a:hover {
     #name {
         line-height: 3rem;
     }
+
+    .location {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #map-loc {
+        padding: 0 10%;
+        min-width: 80%;
+    }
+
+    iframe {
+        margin: 0;
+        padding: 0 5%;
+        max-width: 90%;
+    }
+
 }
 
 @media screen and (max-width: 800px) {
@@ -236,8 +253,7 @@ a:hover {
         text-align: center;
     }
 
-    #map {
-        min-width: 100%;
-        width: 70%;
+    iframe {
+        height: 400px;
     }
 }
