--- a/style.css
+++ b/style.css
@@ -300,4 +300,12 @@ a:hover {
     #worker-img {
         margin-top: 70px;
     }
+
+    .description {
+        font-size: small;
+    }
+
+    .info-list {
+        margin: 0 0 50px;
+    }
 }
