--- a/style.css
+++ b/style.css
@@ -28,46 +28,34 @@ html, body {
 }
 
 .main {
-    display: flex;
-    justify-content: center;
-    padding: 30px;
-    background: linear-gradient(#daecaf, #a5e2b7);
+    position: relative;
+    color: rgb(90, 90, 202);
+    background: linear-gradient(45deg, rgba(5, 176, 219, .2) 0%, rgba(11, 11, 11, .95) 85%) 100% no-repeat, url(img/back-head.jpg) 0 0/cover no-repeat !important;linear-gradient(45deg, rgba(5, 176, 219, .2) 0%, rgba(11, 11, 11, .95) 85%);
+    min-height: 100vh;
+    text-align: right;
+    font-weight: 500;
+    line-height: 100px;
+
 }
 
+    .hello {
+        padding: 70px;
+        font-size: 1vw;
+    }
+
     #avatar {
-        height: 25vw;
-        width: 25vw;
+        position: absolute;
+        left: 8%;
+        bottom: 0px;
     }
 
     .hello-name {
         line-height: 20px;
-        text-align: center;
+        color: white;
+        font-size: 4vw;
+        line-height: 2vw;
+        letter-spacing: 0.20vw;
     }
-
-        #name {
-            font-size: 50px;
-        }
-
-    .achievements {
-        display: flex;
-        text-align: center;
-    }
-
-        .info-container {
-            width: 300px;
-            line-height: 30px;
-            padding-left: 40px
-        }
-
-            .number {
-                padding: 0px;
-                margin: 40px 0px 0px 0px;
-                font-size: 60px;
-            }
-
-            .info-number {
-                font-size: 20px;
-            }
 
 .list {
     padding: 20px;
