--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ html, body {
 .main {
     position: relative;
     color: rgb(90, 90, 202);
-    background: linear-gradient(45deg, rgba(5, 176, 219, .2) 0%, rgba(11, 11, 11, .95) 85%) 100% no-repeat, url(img/back-head.jpg) 0 0/cover no-repeat !important;linear-gradient(45deg, rgba(5, 176, 219, .2) 0%, rgba(11, 11, 11, .95) 85%);
+    background: linear-gradient(45deg, rgba(5, 176, 219, .2) 0%, rgba(11, 11, 11, .95) 85%) 100% no-repeat, url(img/back-head.jpg) 0 0/cover no-repeat !important;
     min-height: 100vh;
     text-align: right;
     font-weight: 500;
